--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="border">#0015D1</color>
     <color name="green">#C600FF00</color>
     <color name="red">#FF4545</color>
+    <color name="blue">#03A9F4</color>
 </resources>
