--- a/app/src/main/res/layout/word_pic_select.xml
+++ b/app/src/main/res/layout/word_pic_select.xml
@@ -6,8 +6,8 @@
         android:id="@+id/tv"
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:text="분류선택"
-        android:textSize="50dp"
+        android:text="사진 추가할 단어선택"
+        android:textSize="30dp"
         android:gravity="center"
         android:background="@color/back"
         android:layout_row="0"
